Fixed scrollbar from appearing

--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -37,6 +37,10 @@ textarea {
     margin-top: 5px;
 }
 
+#body-container {
+    margin: 0;
+}
+
 .form-container {
     width: 80%;
 }
